# tikkiFlow

backend/: .gitignore  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: tasks.py  webhooks.py
backend/app/core/: auth.py  clerk.py  config.py  database.py
backend/app/models/: task.py
backend/app/schemas/: task.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: KanbanBoard.jsx  Layout.jsx  TaskCard.jsx  TaskColumn.jsx  TaskForm.jsx
frontend/src/pages/: DashboardPage.jsx  HomePage.jsx  PricingPage.jsx  SigninPage.jsx  SignupPage.jsx
frontend/src/services/: api.js
frontend/src/styles/: base.css  variables.css
frontend/src/styles/components/: badges.css  cards.css  kanban.css  layout.css  modal.css
frontend/src/styles/pages/: auth.css  dashboard.css  home.css  pricing.css
